  field file by using servers.txt. You must have the latest fieldpack
  and the latest servers.txt from the latest tablepack.
- Support level 2 Teleport as well in blocks like useSelf_skill.
- Support for displaying broken weapons.
- A workaround for a server bug which causes autostorage to fail.
  See the config option 'relogAfterStorage'.

New config options:
- autoSpell (spell name)
  When the sage autospell list is sent from the server, Kore will
  automatically pick the specified skill name to be used.
  Combine this with a useSelf_skill for casting Auto Spell.
- tankersList is a comma-seperated lists of player names that should be
  treated as if they were in your party so they can tank monsters for you.
  It was previously called ksPlayers.
- dcOnPM (flag)
  Disconnect when somebody sends you a PM.
- relogAfterStorage (flag)
  Relogin after performing autostorage. This works around a server bug
  which causes autostorage to fail when you do it the second time.

Internal:
- Wx interface: load some modules only when they're necessary. This
  saves about 2 MB memory.
- The first argument of getField() must now be a field name ("payon")
  instead of a filename ("fields/payon.fld").
- Add %monsters_lut to Globals.pm.

Credits:
- Squall: some minor fixes, charServer support in servers.txt.
- kaliwanagan, piroJOKE: eathena support.
- zdivpsa: PVP mode packet support
- jsteng: new syntax for the inInventory option.
- denni: bug fixes.
- kaliwanagan: sage autospell support
- MindChild: dcOnPM
- Crypticode: broken weapon support, teleport spam fix.

==================
### 1.6.0
==================

** INCOMPATIBLE CHANGES **:
- Fixed spelling of two monsters.
  Bon Gun is now Bongun.
  Requim is now Requiem.

Bug fixes:
- Fixed a memory problem in the pathfinding code which makes Kore crash.
- Fix bulk selling bug which caused disconnect.
- Correctly set names for VVVS weapons.
- Correct strip language code in public messages.